Сделал колесо фортуны
02.11

--- a/static/css/mainPageStyle/_mainGame.scss
+++ b/static/css/mainPageStyle/_mainGame.scss
@@ -64,7 +64,7 @@
 #step_37 { top: 127.7vw; left: 55.7vw;}
 #step_38 { top: 135.1vw; left: 44.05vw;}
 #step_39 { top: 135.1vw; left: 32.5vw;}
-#step_40 { top: 135.1vw; left: 20.9vw;}
+#step_40 { top: 135.1vw; left: 20.9vw; cursor: pointer;}
 
 @include mobile {
   #step_1 { top: 2.7vw; left: 13.7vw; }
