--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Змейка удачи 2025</title>
-    <link rel="stylesheet" href="./static/css/mainPageStyle/mainStyle.css">
+    <link rel="stylesheet" href="../static/css/mainPageStyle/mainStyle.css">
 </head>
 <body>
     <div class="main-page-wrapper">
@@ -13,7 +13,7 @@
             <div class="header-container">
                 <div class="header-inner">
                     <div class="header-inner__logo logo">
-                        <a href="index.html"><img class="logo__image" src="static/images/anixLogo.png" alt="Лого Аникс" /></a>
+                        <a href="/"><img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" /></a>
                     </div>
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
@@ -21,7 +21,7 @@
                                 Условия
                             </li>
                             <li class="navigation-menu__item">
-                                <a href="pages/prizesPage.html">Подарки</a>
+                                <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
                                 Поставщики
@@ -35,28 +35,28 @@
             <span class="main-logo__heading">
                 ЗМЕЙКА УДАЧИ
             </span>
-            <img class="main-logo__image" src="static/images/mainPageImages/year.png" />
+            <img class="main-logo__image" src="../static/images/mainPageImages/year.png" />
         </div>
         <div class="info-block-container">
             <div class="wrapper-suppliers">
                 <div class="suppliers-container suppliers">
                     <span class="suppliers__heading">Поставщики</span>
-                    <img class="suppliers__image" src="static/images/suppliersImages/1_1.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/1_2.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/1_3.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/1_4.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/2_1.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/2_2.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/2_3.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/2_4.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/3_1.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/3_2.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/3_3.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/3_4.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/4_1.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/4_2.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/4_3.png" alt= />
-                    <img class="suppliers__image" src="static/images/suppliersImages/4_4.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/1_1.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/1_2.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/1_3.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/1_4.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/2_1.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/2_2.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/2_3.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/2_4.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/3_1.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/3_2.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/3_3.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/3_4.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/4_1.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/4_2.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/4_3.png" alt= />
+                    <img class="suppliers__image" src="../static/images/suppliersImages/4_4.png" alt= />
                 </div>
             </div>
             <div class="profile-and-date-container">
@@ -66,7 +66,7 @@
                         <span class="profile-avatar-fio">Егор <br/> Черников</span>
                     </div>
                     <div class="toys-container">
-                        <img class="toys-icon" src="static/images/mainPageImages/toyIcon.png" />
+                        <img class="toys-icon" src="../static/images/mainPageImages/toyIcon.png" />
                         <span class="toys-count">2 шт</span>
                     </div>
                     <div class="complete-progress">
@@ -85,19 +85,19 @@
                 <div class="draw-date-container">
                     <div class="draw-date">
                         <div class="draw-date-checkbox">
-                            <img class="draw-date-checkbox-icon" src="static/images/mainPageImages/drawIconYes.png" alt="" />
+                            <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconYes.png" alt="" />
                         </div>
                         <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
                     </div>
                     <div class="draw-date">
                         <div class="draw-date-checkbox">
-                            <img class="draw-date-checkbox-icon" src="static/images/mainPageImages/drawIconNot.png" alt="" />
+                            <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                         </div>
                         <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
                     </div>
                     <div class="draw-date">
                         <div class="draw-date-checkbox">
-                            <img class="draw-date-checkbox-icon" src="static/images/mainPageImages/drawIconNot.png" alt="" />
+                            <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                         </div>
                         <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
                     </div>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="main-game">
-            <img class="main-game-snake" src="static/images/mainPageImages/snake.png" />
+            <img class="main-game-snake" src="../static/images/mainPageImages/snake.png" />
             <div class="main-game-step" id="step_1">1</div>
             <div class="main-game-step" id="step_2">2</div>
             <div class="main-game-step" id="step_3">3</div>
@@ -154,12 +154,12 @@
                 <span class="treasure-game-heading-text">
                     Сундуки везения
                 </span>
-                <img class="treasure-game-heading-cross" src="static/images/miniGameImages/crossIcon.png" />
+                <img class="treasure-game-heading-cross" src="../static/images/miniGameImages/crossIcon.png" />
             </div>
             <div class="treasure-game-chest-container">
-                <img class="treasure-game-chest" id="chest1" src="static/images/miniGameImages/chest1.png">
-                <img class="treasure-game-chest" id="chest2" src="static/images/miniGameImages/chest2.png">
-                <img class="treasure-game-chest" id="chest3" src="static/images/miniGameImages/chest3.png">
+                <img class="treasure-game-chest" id="chest1" src="../static/images/miniGameImages/chest1.png">
+                <img class="treasure-game-chest" id="chest2" src="../static/images/miniGameImages/chest2.png">
+                <img class="treasure-game-chest" id="chest3" src="../static/images/miniGameImages/chest3.png">
             </div>
         </div>
     </div>
@@ -169,7 +169,7 @@
                 <span class="tic-tac-game-heading-text">
                     Крестики нолики
                 </span>
-                <img class="tic-tac-game-heading-cross" src="static/images/miniGameImages/crossIcon.png" />
+                <img class="tic-tac-game-heading-cross" src="../static/images/miniGameImages/crossIcon.png" />
             </div>
             <div class="tic-tac-game">
                 <div class="tic-tac-board" id="ticTacBoard">
@@ -198,54 +198,61 @@
                 <span class="puzzle-game-heading-text">
                     Паззл
                 </span>
-                <img class="puzzle-game-heading-cross" src="static/images/miniGameImages/crossIcon.png" />
+                <img class="puzzle-game-heading-cross" src="../static/images/miniGameImages/crossIcon.png" />
             </div>
             <div class="puzzle-game">
                 <div class="puzzle-board" id="puzzleContainer">
-                    <div class="puzzle-piece" draggable="true" id="piece-1" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/1.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-2" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/2.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-3" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/3.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-4" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/4.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-5" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/5.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-6" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/6.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-7" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/7.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-8" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/8.jpg')"></div>
-                    <div class="puzzle-piece" draggable="true" id="piece-9" style="background-image: url('./static/images/miniGameImages/puzzleImage.jpg/9.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-1" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/1.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-2" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/2.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-3" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/3.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-4" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/4.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-5" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/5.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-6" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/6.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-7" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/7.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-8" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/8.jpg')"></div>
+                    <div class="puzzle-piece" draggable="true" id="piece-9" style="background-image: url('../static/images/miniGameImages/puzzleImage.jpg/9.jpg')"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="casik-game-wrapper">
-        <div class="casik-game-container">
-            <div class="casik-game-heading">
-                <span class="casik-game-heading-text">
-                    казик
+    <div class="wheel-game-wrapper" id="wheelGame" style="display: none">
+        <div class="wheel-game-container">
+            <div class="wheel-game-heading">
+                <span class="wheel-game-heading-text">
+                    Колесо фортуны
                 </span>
-                <img class="casik-game-heading-cross" src="static/images/miniGameImages/crossIcon.png" />
+                <img class="wheel-game-heading-cross" src="../static/images/miniGameImages/crossIcon.png" />
             </div>
-            <div class="сasik-game">
-                <div class="deal-wheel">
-                    <!-- блок с призами -->
-                    <ul class="spinner"></ul>
-                    <!-- язычок барабана -->
-                    <div class="ticker"></div>
-                    <!-- кнопка -->
-                    <button class="btn-spin">Испытай удачу</button>
+            <div class="wheel-game">
+                <div class="pointer"></div>
+                <div class="wheel-container">
+                    <div class="wheel" id="wheel">
+                        <div class="segment" data-value="1"><img class="icon-segment" src="../static/images/prizesPageImages/robotIcon.png"> </div>
+                        <div class="segment" data-value="2"><img class="icon-segment" src="../static/images/prizesPageImages/aerogrillIcon.png"></div>
+                        <div class="segment" data-value="3"><img class="icon-segment" src="../static/images/prizesPageImages/bigGrillIcon.png"></div>
+                        <div class="segment" data-value="4"><img class="icon-segment" src="../static/images/prizesPageImages/yandexStationIcon.png"></div>
+                        <div class="segment" data-value="5"><img class="icon-segment" src="../static/images/prizesPageImages/shoperImage.png"></div>
+                        <div class="segment" data-value="6"><img class="icon-segment" src="../static/images/prizesPageImages/grillIcon.png"></div>
+                        <div class="segment" data-value="7"><img class="icon-segment" src="../static/images/prizesPageImages/robotIcon.png"></div>
+                        <div class="segment" data-value="8"><img class="icon-segment" src="../static/images/prizesPageImages/robotIcon.png"></div>
+                    </div>
                 </div>
+                <button onclick="spinWheel()">Вращать</button>
+                <div id="result"></div>
             </div>
         </div>
     </div>
     <div class="sound-switch">
-        <img class="sound-switch-icon" id="soundSwitch" src="static/images/soundOnIcon.png"/>
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/soundOnIcon.png"/>
     </div>
     <footer class="footer" id="footer">
-        <img class="footer-elka" src="static/images/elkaImage.png" />
+        <img class="footer-elka" src="../static/images/elkaImage.png" />
     </footer>
-    <script src="static/js/puzzleGame.js"></script>
-    <script src="static/js/treasureGame.js"></script>
-    <script src="static/js/soundSwitch.js"></script>
-    <script src="static/js/ticTacGame.js"></script>
-    <script src="static/js/casik.js"></script>
+    <script src="../static/js/puzzleGame.js"></script>
+    <script src="../static/js/treasureGame.js"></script>
+    <script src="../static/js/soundSwitch.js"></script>
+    <script src="../static/js/ticTacGame.js"></script>
+    <script src="../static/js/casik.js"></script>
 </body>
 </html>
 
