--- a/templates/prizesPage.html
+++ b/templates/prizesPage.html
@@ -13,7 +13,7 @@
             <div class="header-container">
                 <div class="header-inner">
                     <div class="header-inner__logo logo">
-                        <a href="../index.html"><img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" /></a>
+                        <a href="index.html"><img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" /></a>
                     </div>
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
