--- a/static/css/mainPageStyle/_profileAndDateInfo.scss
+++ b/static/css/mainPageStyle/_profileAndDateInfo.scss
@@ -5,20 +5,71 @@
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
 }
 
+.profile-authorization {
+  border-radius: 1vw;
+  height: 50%;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1vw;
+
+
+  @include mobile {
+    height: 60%;
+    row-gap: 1.5vw;
+  }
+
+  .profile-entrance {
+
+    &__button {
+      background-color: #D92446;
+      border-radius: 3vw;
+      font-size: 1.5vw;
+      height: 3vw;
+      width: 15vw;
+
+      @include mobile {
+        height: 4.5vw;
+        width: 25vw;
+        font-size: 2.5vw;
+      }
+    }
+  }
+
+  .profile-registration {
+
+    &__button {
+      height: 3vw;
+      width: 15vw;
+      background-color: #FF4A15;
+      border-radius: 3vw;
+      font-size: 1.5vw;
+
+      @include mobile {
+        height: 4.5vw;
+        width: 25vw;
+        font-size: 2.5vw;
+      }
+    }
+  }
+}
+
+
 .profile {
   background-color: var(--background-color-el);
   border-radius: 1vw;
-  height: 60%;
-  display: none;
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
-  grid-template-columns: 0.7fr 0.3fr;
-  grid-template-rows: auto 1fr;
-  grid-template-areas:
+
+  &-container {
+    height: 60%;
+    display: grid;
+    grid-template-columns: 0.7fr 0.3fr;
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
           "avatar toys"
           "progres progres";
-
-
-
+  }
 
   &-avatar {
     grid-area: avatar;
@@ -57,108 +108,57 @@
       }
     }
   }
-}
 
-.toys-container {
-  display: flex;
-  grid-area: toys;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.3vw;
+  .toys-container {
+    display: flex;
+    grid-area: toys;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.3vw;
 
-  @include mobile {
+    @include mobile {
+      font-size: 2vw;
+    }
+  }
+
+  .toys-icon {
+    width: 2.5vw;
+    position: relative;
+
+    @include mobile {
+      width: 4vw;
+    }
+  }
+
+  .toys-count {
     font-size: 2vw;
+    font-weight: bold;
   }
-}
 
-.toys-icon {
-  width: 2.5vw;
-  position: relative;
+  .complete-progress {
+    grid-area: progres;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  @include mobile {
-    width: 4vw;
-  }
-}
+    &-count {
+      font-size: 2vw;
 
-.toys-count {
-  font-size: 2vw;
-  font-weight: bold;
-}
-
-.complete-progress {
-  grid-area: progres;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  &-count {
-    font-size: 2vw;
-
-    @include mobile {
-      font-size: 2.5vw;
+      @include mobile {
+        font-size: 2.5vw;
+      }
     }
-  }
 
-  &-bar {
-    border-radius: 1vw;
-    height: 0.35vw;
-    width: 75%;
-    background-color: pink;
-    margin-top: 0.5vw;
+    &-bar {
+      border-radius: 1vw;
+      height: 0.35vw;
+      width: 75%;
+      background-color: pink;
+      margin-top: 0.5vw;
 
-    @include mobile {
-      height: 0.5vw;
-    }
-  }
-}
-
-
-.profile-authorization {
-  background-color: var(--background-color-el);
-  border-radius: 1vw;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 1vw;
-
-
-  @include mobile {
-    height: 60%;
-    row-gap: 1.5vw;
-  }
-}
-
-.profile-registration {
-  &__button {
-    height: 3vw;
-    width: 15vw;
-    background-color: #FF4A15;
-    border-radius: 3vw;
-    font-size: 1.5vw;
-
-    @include mobile {
-      height: 4.5vw;
-      width: 25vw;
-      font-size: 2.5vw;
-    }
-  }
-}
-
-.profile-entrance {
-
-  &__button {
-    background-color: #D92446;
-    border-radius: 3vw;
-    font-size: 1.5vw;
-    height: 3vw;
-    width: 15vw;
-
-    @include mobile {
-      height: 4.5vw;
-      width: 25vw;
-      font-size: 2.5vw;
+      @include mobile {
+        height: 0.5vw;
+      }
     }
   }
 }
