--- a/static/css/stageTwoStyle/mainStyleStageTwo.css
+++ b/static/css/stageTwoStyle/mainStyleStageTwo.css
@@ -321,12 +321,58 @@ svg * {
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
 }
 
+.profile-authorization {
+  border-radius: 1vw;
+  height: 50%;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1vw;
+}
+@media (max-width: 900px) {
+  .profile-authorization {
+    height: 60%;
+    row-gap: 1.5vw;
+  }
+}
+.profile-authorization .profile-entrance__button {
+  background-color: #D92446;
+  border-radius: 3vw;
+  font-size: 1.5vw;
+  height: 3vw;
+  width: 15vw;
+}
+@media (max-width: 900px) {
+  .profile-authorization .profile-entrance__button {
+    height: 4.5vw;
+    width: 25vw;
+    font-size: 2.5vw;
+  }
+}
+.profile-authorization .profile-registration__button {
+  height: 3vw;
+  width: 15vw;
+  background-color: #FF4A15;
+  border-radius: 3vw;
+  font-size: 1.5vw;
+}
+@media (max-width: 900px) {
+  .profile-authorization .profile-registration__button {
+    height: 4.5vw;
+    width: 25vw;
+    font-size: 2.5vw;
+  }
+}
+
 .profile {
   background-color: var(--background-color-el);
   border-radius: 1vw;
-  height: 60%;
-  display: none;
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
+}
+.profile-container {
+  height: 60%;
+  display: grid;
   grid-template-columns: 0.7fr 0.3fr;
   grid-template-rows: auto 1fr;
   grid-template-areas: "avatar toys" "progres progres";
@@ -368,8 +414,7 @@ svg * {
     font-size: 1.8vw;
   }
 }
-
-.toys-container {
+.profile .toys-container {
   display: flex;
   grid-area: toys;
   flex-direction: column;
@@ -377,41 +422,38 @@ svg * {
   font-size: 1.3vw;
 }
 @media (max-width: 900px) {
-  .toys-container {
+  .profile .toys-container {
     font-size: 2vw;
   }
 }
-
-.toys-icon {
+.profile .toys-icon {
   width: 2.5vw;
   position: relative;
 }
 @media (max-width: 900px) {
-  .toys-icon {
+  .profile .toys-icon {
     width: 4vw;
   }
 }
-
-.toys-count {
+.profile .toys-count {
   font-size: 2vw;
   font-weight: bold;
 }
-
-.complete-progress {
+.profile .complete-progress {
   grid-area: progres;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.complete-progress-count {
+.profile .complete-progress-count {
   font-size: 2vw;
 }
 @media (max-width: 900px) {
-  .complete-progress-count {
+  .profile .complete-progress-count {
     font-size: 2.5vw;
   }
 }
-.complete-progress-bar {
+.profile .complete-progress-bar {
   border-radius: 1vw;
   height: 0.35vw;
   width: 75%;
@@ -419,55 +461,8 @@ svg * {
   margin-top: 0.5vw;
 }
 @media (max-width: 900px) {
-  .complete-progress-bar {
+  .profile .complete-progress-bar {
     height: 0.5vw;
-  }
-}
-
-.profile-authorization {
-  background-color: var(--background-color-el);
-  border-radius: 1vw;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 1vw;
-}
-@media (max-width: 900px) {
-  .profile-authorization {
-    height: 60%;
-    row-gap: 1.5vw;
-  }
-}
-
-.profile-registration__button {
-  height: 3vw;
-  width: 15vw;
-  background-color: #FF4A15;
-  border-radius: 3vw;
-  font-size: 1.5vw;
-}
-@media (max-width: 900px) {
-  .profile-registration__button {
-    height: 4.5vw;
-    width: 25vw;
-    font-size: 2.5vw;
-  }
-}
-
-.profile-entrance__button {
-  background-color: #D92446;
-  border-radius: 3vw;
-  font-size: 1.5vw;
-  height: 3vw;
-  width: 15vw;
-}
-@media (max-width: 900px) {
-  .profile-entrance__button {
-    height: 4.5vw;
-    width: 25vw;
-    font-size: 2.5vw;
   }
 }
 
